src/components/Profile.css
.profile-container{
    background-color: rgb(46, 46, 46);
    /* height: 450px; */
    padding: 23px 20px 0px 20px;
    max-width: 250px;
    width: fit-content;
    border-radius: 20px;
    filter: drop-shadow(0px 0px 15px black);
    color: rgb(234, 235, 234);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
    border: solid 1px rgb(82, 82, 82);
    z-index: 1200;
    left: 20%;
    top: 25%;
}
.profile-container img{
    width: 250px;
}
.det-container{
    text-align:center;
}
.det-container h2{
    padding-bottom: 15px;
    border-bottom: solid 1px #575757;
}
.det-container h3{
    font-weight: 400;
    font-size: 13px;
    color: rgb(179, 179, 179);
}
.social{
    margin: 20px;
    display: flex;
    gap: 20px;
    justify-content: center;
    font-size: 17px;
}
.social i:hover{
    background-color: #ffffff;
    cursor: pointer;
    color: #272626;
    transform: scale(1.05);
}
.social i{
    padding: 3px;
    border-radius: 10px;
    transition: 0.3s;
}
.social a{
    text-decoration: none;
    color: white;
}
.details ul li{
    list-style: none;
    font-size: 15px;
    color: #7e7b7b;
}
.details ul{
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: start;
    margin-left: -20px;
}
.contact-button {
  display: inline-block;
  background: #007bff;
  color: #fff;
  padding: 12px 0px;
  border-radius: 30px;
  font-size: 16px;
  text-decoration: none;
  transition: 0.3s ease;
  margin-bottom: 10px;
  width: 100%;
}

.contact-button:hover {
  background: #5e5e5e;
}

@media (max-width: 600px) {
  @media (max-width: 600px) {
  .profile-container {
    position: static;
    width: 80%;
    max-width: 90vw;
    margin: 20px auto;
    border-radius: 15px;
    padding: 20px;
    margin-top: 40px;
    filter: none;
    background:none;
    border: none;
    margin-bottom: -20px;
  }

  .profile-container img {
    width: 100%;
  }
  .details ul{
    align-items: center;
  }
  .details ul li{
    color: white;
  }
  .det-container h3{
    color: white;
  }
  .profile-container img{
    filter: drop-shadow(0px 0px 1px white);
  }
  .contact-button{
    width: auto;
    padding: 12px 24px;
  }
}

}

